--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -2857,7 +2857,7 @@ h2::after {
 } */
 
 
-
+/* 
 .shape {
     background-color: #ddd;
     padding: 20px;
@@ -2877,4 +2877,147 @@ h2::after {
     justify-content: center;
     align-items: center;
     transform: translate3d(0, 0, 10px);
+} */
+
+
+/* 
+* {
+    box-sizing: border-box;
+}
+
+.cont {
+    margin: 40px auto;
+    width: 200px;
+    perspective: 600px;
+    
+}
+
+.box {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    transform-origin: right center;
+}
+
+.box:hover {
+transform:translateX(-100%) rotateY(-180deg);
+}
+
+.box .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+    backface-visibility: hidden ;
+}
+
+.box .front {
+    background-color: red;
+}
+.box .back {
+    background-color: green;
+    transform: rotateY(180deg);
+} */
+
+
+/* 
+* {
+    box-sizing: border-box;
+}
+
+.cont {
+    margin: 40px auto;
+    width: 200px;
+    perspective: 600px;
+}
+
+.box{
+    width: 200px;
+    height: 200px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s ;
+} 
+
+.box:hover {
+    transform:  rotateX(-180deg);
+}
+
+.box .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    text-transform: capitalize;
+    backface-visibility: hidden;
+}
+
+.box .front {
+    background-color:#FA3664 ;
+}
+
+.box .back {
+    background-color:#1692FC ;
+    transform: rotateX(180deg);
+} */
+
+
+
+
+/* h1 {
+    margin: 60px auto;
+    width: fit-content;
+    position: relative;
+    padding: 20px;
+    color: white;
+    font-size: 30px;
+    background-color:#009688 ;
+}
+
+h1::after {
+    content: "";
+    position: absolute;
+    background-color:#009688 ;
+    width: 30%;
+    height: 100%;
+    left: -25px;
+    top: 0;
+    z-index: -1;
+    transform: skewX(18deg);
+}
+h1::before {
+    content: "";
+    position: absolute;
+    background-color:white ;
+    width: 4%;
+    height: 100%;
+    left: -5px;
+    top: 0;
+    transform: skewX(18deg);
+} */
+
+
+
+
+h1 {
+    background-color:#FF5722 ;
+    margin: 60px auto;
+    width: fit-content;
+    padding: 20px;
+    color: white;
+    font-size: 30px;
+    position: relative;
+    transform: matrix(1, 0, 0, 1, 20, 10);
 }
