--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -3044,7 +3044,7 @@ h1::before {
 
 
 
-div {
+/* div {
     width: 200px;
     height: 200px;
     background-color:#607D8B ;
@@ -3074,4 +3074,148 @@ div::after {
     transform: rotate(45deg);
     margin-left:-70px ;
     margin-top:-70px ;
+} */
+
+
+
+
+/* div {
+    background-color: red;
+    color: white;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    animation-name: change-color;
+    animation-duration: 8s;
+}
+
+@keyframes change-color{
+    0%{
+        background-color: red;
+    }
+    10%{
+        background-color: transparent;
+    }
+    35%{
+        background-color: green;
+    }
+    60%{
+        background-color: cadetblue;
+    }
+    90%{
+        background-color: blue;
+    }
+    100%{
+        background-color: red;
+    }
+}  */
+
+
+
+
+/* div {
+    background-color: #e8e3e3 ;
+    color: white;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+    border-radius: 50%;
+    border: 3px solid #03a9f4;
+    border-left-color:transparent ;
+    animation-name: spin;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-direction: alternate-reverse;
+    animation-delay: 2s;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}  */
+
+
+
+/* div {
+    background-color: #eee;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    animation-name:coloring ;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    animation-fill-mode: both;
+    animation-play-state: running;
+    animation:coloring 5s linear 1 2s reverse  ;
+}
+
+div:hover {
+    animation-play-state: paused;
+}
+
+@keyframes coloring {
+    0%{
+        background-color: red;
+    }
+    50%{
+        background-color: black;
+    }
+    100%{
+        background-color: cadetblue;
+    }
+} */
+
+
+
+body {
+    background-color: #333;
+}
+
+.load {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+.load div {
+    width: 20px;
+    height: 20px;
+    background-color: orchid;
+    border-radius: 50%;
+    margin: 0 5px;
+    animation: up-and-down 0.9s infinite alternate ;
+}
+.load .two {
+    animation-delay: 0.3s;
+}
+.load .three {
+    animation-delay: 0.6s;
+}
+
+@keyframes up-and-down {
+    to {
+        opacity: 0.2;
+        transform: translateY(-20px);
+    }
 }
