--- a/CSS_Project/css/main.css
+++ b/CSS_Project/css/main.css
@@ -3187,7 +3187,7 @@ div:hover {
 } */
 
 
-
+/* 
 body {
     background-color: #333;
 }
@@ -3218,4 +3218,152 @@ body {
         opacity: 0.2;
         transform: translateY(-20px);
     }
+} */
+
+
+/* div {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-top:100px ;
+    border: 4px solid #D92460 ;
+    border-radius: 50%;
+    border-left-color: transparent;
+    animation: spin 1.5s linear infinite ;
+    animation-play-state: running;
 }
+div:hover {
+    animation-play-state: paused;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+div::before {
+        content: "";
+    position: absolute;
+    width: 130%;
+    height: 130%;
+    border-radius: 50%;
+    border: 4px solid #2394F3 ;
+    border-right-color: transparent;
+    left: -10px;
+    top: -10px;
+}
+div::after {
+        content: "";
+    position: absolute;
+    width: 160%;
+    height: 160%;
+    border-radius: 50%;
+    border: 4px solid #FC9E00 ;
+    border-top-color: transparent;
+     left: -16px;
+    top: -17px;
+} */
+
+
+/* div {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-top:100px ;
+    border: 4px solid #2394F3 ;
+    border-radius: 50%;
+    border-bottom-color: transparent;
+    animation: spin 1s linear infinite ;
+    animation-play-state: paused;
+    animation-delay: 1s;
+}
+div:hover {
+    animation-play-state: running;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+div::before {
+        content: "";
+    position: absolute;
+    width: 130%;
+    height: 130%;
+    border-radius: 50%;
+    border: 4px solid #FC9E00;
+    border-bottom-color: transparent;
+left: 50%;
+  top: 50%;
+  transform: translate(-50% , -50%);
+}
+div::after {
+        content: "";
+    position: absolute;
+    width: 160%;
+    height: 160%;
+    border-radius: 50%;
+    border: 4px solid #000 ;
+    border-bottom-color: transparent;
+left: 50%;
+  top: 50%;
+  transform: translate(-50% , -50%);
+} */
+
+
+/* span {
+    width: 50px;
+    height: 50px;
+    background-color:#ddd ;
+    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-top: -50px;
+    border-radius: 50%;
+    border: 3px solid;
+    border-left-color:transparent ;
+    animation: spin 1s linear infinite ;
+    animation-play-state: running;
+}
+span:hover {
+    animation-play-state: paused;
+}
+
+span::before {
+    content: "";
+    position: absolute;
+    width: calc(50px + 2px);
+    height: calc(50px + 2px);
+    border: 3px solid cadetblue;
+    border-left-color:transparent ;
+    left: 50%;
+    top: 50%;
+    border-radius: 50%;
+    transform: translate(-50%,-50%);
+}
+
+@keyframes spin  {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+} */
+
+
+
